# Fluid-Sim

./: .gitignore  README.md  config.py  main.py  pyproject.toml
src/core/: advection.py  forces.py  grid.py  grid_viz.py  projections.py  solver.py
src/utils/: boundary.py  interpolation.py
tests/: conftest.py  test_convergence.py  test_forces.py  test_interpolation.py  test_projections.py
